# apv-mcts-gomoku

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  readme.md  run.sh
includes/gomoku/: board.h  board.inl  coord.h  coord.inl  eval_queue.h  evaluator.h  gomoku.h  logger.h  selfeval.h  selfplay.h  server.h
includes/mcts/: evaluator.h  noise.h  state.h  tree.h
logs/txt/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt
sources/: selfplay_main.cc
sources/gomoku/: board.cc  eval_queue.cc  evaluator.cc  logger.cc  selfplay.cc  server.cc  utils.cc
sources/mcts/: node.cc  noise.cc  tree.cc
